<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>QListSaveClass</class>
 <widget class="QDialog" name="QListSaveClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>480</width>
    <height>272</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="minimumSize">
   <size>
    <width>480</width>
    <height>272</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>480</width>
    <height>272</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Save File</string>
  </property>
  <widget class="QLabel" name="pic1Label">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>480</width>
     <height>272</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>480</width>
     <height>272</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>480</width>
     <height>272</height>
    </size>
   </property>
   <property name="contextMenuPolicy">
    <enum>Qt::DefaultContextMenu</enum>
   </property>
   <property name="text">
    <string/>
   </property>
   <property name="pixmap">
    <pixmap resource="pcsp.qrc">:/../../Resources/Resources/pic1.png</pixmap>
   </property>
  </widget>
  <widget class="QListWidget" name="icon0List">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>160</width>
     <height>272</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
     <width>160</width>
     <height>272</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>160</width>
     <height>272</height>
    </size>
   </property>
   <property name="palette">
    <palette>
     <active>
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="64">
         <red>0</red>
         <green>0</green>
         <blue>0</blue>
        </color>
       </brush>
      </colorrole>
     </active>
     <inactive>
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="64">
         <red>0</red>
         <green>0</green>
         <blue>0</blue>
        </color>
       </brush>
      </colorrole>
     </inactive>
     <disabled>
      <colorrole role="Base">
       <brush brushstyle="SolidPattern">
        <color alpha="255">
         <red>240</red>
         <green>240</green>
         <blue>240</blue>
        </color>
       </brush>
      </colorrole>
     </disabled>
    </palette>
   </property>
   <property name="frameShape">
    <enum>QFrame::NoFrame</enum>
   </property>
   <property name="frameShadow">
    <enum>QFrame::Raised</enum>
   </property>
   <property name="lineWidth">
    <number>0</number>
   </property>
   <property name="verticalScrollBarPolicy">
    <enum>Qt::ScrollBarAlwaysOff</enum>
   </property>
   <property name="horizontalScrollBarPolicy">
    <enum>Qt::ScrollBarAlwaysOff</enum>
   </property>
   <property name="autoScrollMargin">
    <number>82</number>
   </property>
   <property name="showDropIndicator" stdset="0">
    <bool>false</bool>
   </property>
   <property name="iconSize">
    <size>
     <width>144</width>
     <height>80</height>
    </size>
   </property>
   <property name="textElideMode">
    <enum>Qt::ElideNone</enum>
   </property>
   <property name="verticalScrollMode">
    <enum>QAbstractItemView::ScrollPerPixel</enum>
   </property>
   <property name="horizontalScrollMode">
    <enum>QAbstractItemView::ScrollPerPixel</enum>
   </property>
   <property name="layoutMode">
    <enum>QListView::Batched</enum>
   </property>
   <property name="spacing">
    <number>4</number>
   </property>
   <property name="viewMode">
    <enum>QListView::IconMode</enum>
   </property>
   <property name="uniformItemSizes">
    <bool>true</bool>
   </property>
   <property name="batchSize">
    <number>6</number>
   </property>
  </widget>
  <widget class="QPushButton" name="saveButton">
   <property name="enabled">
    <bool>false</bool>
   </property>
   <property name="geometry">
    <rect>
     <x>310</x>
     <y>240</y>
     <width>75</width>
     <height>23</height>
    </rect>
   </property>
   <property name="text">
    <string>Save</string>
   </property>
  </widget>
  <widget class="QPushButton" name="cancelButton">
   <property name="geometry">
    <rect>
     <x>400</x>
     <y>240</y>
     <width>75</width>
     <height>23</height>
    </rect>
   </property>
   <property name="text">
    <string>Cancel</string>
   </property>
  </widget>
  <widget class="QLabel" name="descLabel">
   <property name="geometry">
    <rect>
     <x>230</x>
     <y>70</y>
     <width>181</width>
     <height>81</height>
    </rect>
   </property>
   <property name="text">
    <string/>
   </property>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="../../../pcsp-xmb/src/qt4/qpcspxmb.qrc"/>
  <include location="pcsp.qrc"/>
  <include location="../../../pcsp-xmb/src/qt4/qpcspxmb.qrc"/>
 </resources>
 <connections>
  <connection>
   <sender>icon0List</sender>
   <signal>itemClicked(QListWidgetItem*)</signal>
   <receiver>QListSaveClass</receiver>
   <slot>displayPic(QListWidgetItem*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>125</x>
     <y>219</y>
    </hint>
    <hint type="destinationlabel">
     <x>207</x>
     <y>297</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>icon0List</sender>
   <signal>itemClicked(QListWidgetItem*)</signal>
   <receiver>QListSaveClass</receiver>
   <slot>displayDesc(QListWidgetItem*)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>136</x>
     <y>226</y>
    </hint>
    <hint type="destinationlabel">
     <x>228</x>
     <y>320</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>saveButton</sender>
   <signal>clicked(bool)</signal>
   <receiver>QListSaveClass</receiver>
   <slot>saveAction()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>358</x>
     <y>253</y>
    </hint>
    <hint type="destinationlabel">
     <x>365</x>
     <y>300</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>cancelButton</sender>
   <signal>clicked(bool)</signal>
   <receiver>QListSaveClass</receiver>
   <slot>cancelAction()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>429</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>427</x>
     <y>276</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>displayPic(QListWidgetItem*)</slot>
  <slot>displayDesc(QListWidgetItem*)</slot>
  <slot>saveAction()</slot>
  <slot>cancelAction()</slot>
 </slots>
</ui>
